# hanimo-rag

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  NOTICE  README.ko.md  README.md  docker-compose.yml  hanimo-rag.md  install.sh  modolrag.md  pyproject.toml  results.tsv  setup.py  start.sh  stop.sh
.claude/: settings.json
.omc/: project-memory.json
.omc/sessions/: 46ec42e0-9dcb-4643-a24c-a091b1de29de.json  4fb38529-1b07-4fd0-92e8-9b9cc1961a97.json  aba4a568-62a5-414d-b2c6-8368ff2ade59.json
.omc/state/: agent-replay-4fb38529-1b07-4fd0-92e8-9b9cc1961a97.jsonl  agent-replay-5941ef82-5947-4f3b-85be-a286f884890d.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  chrome.tsx  i18n.tsx  index.css  lib.tsx  main.tsx  theme.ts
dashboard/src.legacy/: App.tsx  i18n.tsx  index.css  theme.tsx
docs/: ARCHITECTURE.md  DESIGN_ANALYSIS.md  FRONTEND_ARCHITECTURE_DECISION.md  HANIMO_WEBUI_INTEGRATION.md  LLM_WIKI_RESEARCH_AND_PLAN.md  MIGRATION_v1_to_v2.md  ModolRAG_누구나_사용가이드.html  ModolRAG_핵심이론_및_컨셉.html  RELEASE_NOTES_v2.0.0.md  SCHEMA.md  design-01-saas.html  design-02-financial.html  design-03-devtools.html  design-04-warmbeige.html  design-05-emerald.html  design-gallery.html  hanimo-rag_누구나_사용가이드.html  hanimo-rag_핵심이론_및_컨셉.html  index.html  landing.html  project-dashboard.html
docs/_archive/: design-concepts-2.html  design-concepts-3.html  design-concepts.html  design-gallery.html  design-linear-dark-full.html  design-notion-white-full.html  design-sand-dune-full.html  design-vercel-clean-full.html
hanimo_rag/: __init__.py  cli.py  config.py  main.py  server.py  types.py
hanimo_rag/api/: admin.py  apps.py  auth.py  collections.py  generate.py  graph.py  ingest.py  middleware.py  search.py
hanimo_rag/core/: __init__.py  agent.py  chunker.py  embedder.py  extractor.py  fts.py  graph_store.py  hybrid_search.py  hyde.py  indexer.py  judge.py  llm.py  pipeline.py  router.py  vector_store.py
hanimo_rag/db/: __init__.py  connection.py  (+1 more)
hanimo_rag_클로드디자인/: app.jsx  chrome.jsx  i18n.jsx  index.html  lib.jsx  pages-app-detail.jsx  pages-guide-apps.jsx  pages-rest.jsx
js/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
modolrag/: config.py  main.py
tests/: run_all.sh  test_api.py  test_chunker.py  test_extractor.py  test_hybrid_search.py  test_parsers.py  test_store.py
(+68 files in other folders)
