[project]
name = "hanimo-rag"
version = "2.0.0"
description = "Agentic LiteRAG — LLM-native retrieval with zero vector infrastructure"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0", "pdfplumber>=0.11.0"]
docx = ["python-docx>=1.1.0"]
xlsx = ["openpyxl>=3.1.0"]
all = [
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3.0"]

[project.scripts]
hanimo-rag = "hanimo_rag.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hanimo_rag*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
